<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.LoisirsFragment">

    <TextView
        android:id="@+id/txt_loisirs"
        android:layout_width="match_parent"
        android:text="@string/lois_titre"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="#000000"
        android:paddingBottom="20dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">
            <ImageView
                android:id="@+id/img_squash"
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:padding="6dp"
                android:src="@drawable/squash"
                android:text="@string/hello_blank_fragment" />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/rounded_image_white"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">
            <ImageView
                android:id="@+id/img_lecture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="6dp"
                android:src="@drawable/adlerolsen"
                android:text="@string/hello_blank_fragment" />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/rounded_image_white"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">
            <ImageView
                android:id="@+id/img_club_sport"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="6dp"
                android:src="@drawable/neoness"
                android:text="@string/hello_blank_fragment" />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/rounded_image_white"/>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_squash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:layout_weight="0.3"
            android:textColor="#000000"
            android:text="@string/lois_squash"/>
        <TextView
            android:id="@+id/txt_lecture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:layout_weight="0.3"
            android:textColor="#000000"
            android:text="@string/lois_lecture"/>
        <TextView
            android:id="@+id/txt_club_de_sport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:layout_weight="0.3"
            android:textColor="#000000"
            android:text="@string/lois_club_sport"/>
    </LinearLayout>
</LinearLayout>