<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FormationFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_epita"/>
            </FrameLayout>
            <TextView
                android:id="@+id/form_epita"
                android:text="@string/form_epita"
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_height="2px"
            android:background="#FF909090" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30">
            <ImageView
                android:layout_width="300px"
                android:layout_height="100px"
                android:layout_gravity="center"
                android:background="@drawable/partecis"/>
            </FrameLayout>
            <TextView
                android:id="@+id/form_partecis"
                android:text="@string/form_partecis"
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_height="2px"
            android:background="#FF909090" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bnpp"/>
            </FrameLayout>
            <TextView
                android:id="@+id/form_bnpp"
                android:text="@string/form_bnpp"
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_height="2px"
            android:background="#FF909090" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_cgi"/>
            </FrameLayout>
            <TextView
                android:id="@+id/form_cgi"
                android:text="@string/form_cgi"
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_height="2px"
            android:background="#FF909090" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_polytech"/>
            </FrameLayout>
            <TextView
                android:id="@+id/form_polytech"
                android:text="@string/form_polytech"
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_height="2px"
            android:background="#FF909090" />
    </LinearLayout>
</ScrollView>